module 2: Exercise 3 - Overflow - margins fix

--- a/character-creator/src/components/ButtonRow/ButtonRow.module.css
+++ b/character-creator/src/components/ButtonRow/ButtonRow.module.css
@@ -1,4 +1,7 @@
 .buttonRow {
     white-space: nowrap;
     overflow: auto;
+
+    margin: 0 -24px -24px -24px;
+    padding: 24px;
 }
